# vidsum

./: README.md  pyproject.toml
video_summary/: __init__.py  __main__.py  cli.py  gemini_utils.py  main.py  summarize_video.py  video_processing_utils.py
